# TwilightStruggle

./: .gitignore  README.md
Algorithm/: BigInteger.cpp  BigInteger.h  CMakeLists.txt  main.cpp
Algorithm/CodingInterviewGuide/: .gitignore  settings.gradle.kts
Algorithm/dataStructure/: BigIntegerOperator.cpp  CMakeLists.txt  Vector.cpp  Vector.h
Algorithm/dataStructure/app/: AppHash.cpp  AppJson.cpp  AppMurmurHash.cpp  AppNum.cpp  AppPQUnsortedArray.cpp  AppSegmentTree.cpp  AppSnake.cpp  AppSort.cpp  AppUnionFindAlgorithms.cpp  AppUriDecode.cpp  AppVector.cpp  MyJson.cpp  RemoveComments.cpp
Algorithm/dataStructure/data/: sample_file.cpp
Algorithm/dataStructure/entity/: Board.cpp  GameEntry.cpp  IndexOutOfBounds.cpp  IndexOutOfBounds.h  Scores.cpp
Algorithm/dataStructure/include/: BloomFilter.h  DAryHeap.hpp  Graph.h  Hash.h  Num.h  PQSortedArray.h  PQUnsortedArray.h  SegmentTree.h  Sort.h  StringUtils.h  UnionFindAlgorithm.hpp  Vector.h
Algorithm/dataStructure/src/: BigIntegerOperator.cpp  Graph.cpp  Hash.cpp  PQUnsortedArray.cpp  Sort.cpp
Algorithm/dataStructure_tests/: VectorTest.cpp
Algorithm/leetcode/: Number1CounterInInteger.cpp
Algorithm/python/: Apriori.ipynb  Markov Decision Process.ipynb  convex_hull.ipynb  convex_hull_multidimension.ipynb  huffman.ipynb  minimum_tangent_circle.ipynb  sorts.ipynb
Algorithm/tests/: BigIntTEst.cpp  GameEntryTest.cpp  Number1CounterInIntegerTest.cpp  VectorTest.cpp
CCPP/2DDrawing/: 01_tuples.cpp  02_index.cpp  03_calcsize.cpp  04_hello_world.cpp  05_randomwalks.cpp  06_xor_and_or_texture.cpp  08_light_and_color.cpp  09_lines.cpp  10_curved_dots.cpp  10_curved_lines.cpp  11_rectangles.cpp  11_rectangles_from_file.cpp  11_squint_with_your_eyes.txt  12_circles.cpp  12_circles_from_file.cpp  12_squint_with_your_eyes.txt  12_wedge.cpp  13_squint_with_your_eyes.txt  13_triangles.cpp  13_triangles_with_file.cpp  14_animation_05.cpp  14_animation_11.cpp  14_animation_12.cpp  14_animation_13.cpp  15_read_p6_ppm.cpp  15_weekchart.cpp  16_draw_bar_chart.cpp  16_draw_donut_chart.cpp  16_draw_font.cpp  16_draw_investment.cpp  16_draw_market_size.cpp  16_draw_pie_chart.cpp  16_draw_table.cpp  17_colab_peacock.cpp  17_colab_peacock.txt  CMakeLists.txt  find_circle.cpp
CCPP/DiscoveringModernCPP/: CMakeLists.txt
CCPP/DiscoveringModernCPP/ch01/: 01Basic.cpp  02NonNarrowingInit.cpp  03UniquePointer.cpp  04SharedPointer.cpp  05Valarray.cpp  1_2_5_Literals.cpp  1_3_Memories.cpp  1_8_3_SmartPointers.cpp
CCPP/DiscoveringModernCPP/ch02/: db_manager.cpp  literatal_expression.cpp  my_vector.cpp
CCPP/DiscoveringModernCPP/ch03/: 01FunctionTemplate.cpp  03TemplateClass.cpp  05TemplateSpecialization.cpp  06FixedSizeContainer.cpp  07Functors.cpp
CCPP/DiscoveringModernCPP/preface/: gsd.cpp
Environment/cmake/: .gitignore  CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
Environment/cmake/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
Interview/Codeforces/: .gitignore  CMakeLists.txt  input.txt  inputGenerator.cpp  review.md
Interview/Codeforces/1659/: B.cpp  D.cpp  E.cpp  F.cpp
Interview/Codeforces/780/: A.cpp  B.cpp  C.cpp  D.cpp  G.cpp
Interview/Codeforces/785/: E.cpp  F.cpp
Interview/Codeforces/795/: A.cpp  B.cpp  C.cpp  D.cpp
Interview/Codeforces/799/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
Interview/Codeforces/805div3/: B.cpp  E.cpp  F.cpp  G.cpp
Interview/Codeforces/806div4/: C.cpp  D.cpp  F.cpp  G.cpp
Interview/Codeforces/810div2/: A.cpp  B.cpp
Interview/Codeforces/811div3/: A.cpp  B.cpp  C.cpp  D.cpp  G.cpp
Interview/Codeforces/SWERC/: A_OrganizingSWERC.cpp  C_EuropeanTrip_hard.cpp
Interview/Codeforces/SWERC1662/: D_EvolutionsOfWeasels.cpp  E_RoundTable_hard.cpp  F_Antennas_queue_hard.cpp  F_Antennas_segTree_hard.cpp
Interview/Codeforces/array/: ABCSort_medium.cpp  AllZeroSequences_simple.cpp  AntiComprimePermutation.cpp  ArrayBalancing.cpp  BestSandwichRecipes_simple.cpp  BinaryString_medium.cpp  BlackAndWhiteStrip_1000.cpp  ChildishPranks.cpp  DetectiveTask_medium.cpp  DogWalking_medium.cpp  EatingQueries.cpp  EqualCandies_simple.cpp  FaultTolerentNetwork.cpp  FibonacciAddition.cpp  GameTrick_800.cpp  GameWithCards_800.cpp  GoodPairs.cpp  GreatSequence.cpp  IntegralArray_medium.cpp  LineEmpire_medium.cpp  LongestStrike_medium.cpp  LostPermutation.cpp  MakeItIncrease_simple.cpp  MarinAndPhotoshop.cpp  Market_medium.cpp  MatrixAndShift_medium.cpp  Meeting_medium.cpp  MinimusAndMaximums.cpp  ProfSlim_simple.cpp  ProveHimWrong.cpp  QualityVsQuantity.cpp  RepetitionsDecoding.cpp  ReschedulingTheExam.cpp  ReverseSortSum.cpp  Robots_simple.cpp  RooksDefender_1400.cpp  SanaeAndGiantRobot_2500.cpp  SquareCounting.cpp  StoreAgeProblem_1200.cpp  StrangeInEquity_medium.cpp  (+9 more)
Interview/Codeforces/beginner/: AllDistinct.cpp  ArrayDecrements_800.cpp  BinaryDeque.cpp  EverythingEveryWhere_800.cpp  Marathon.cpp  ParkwayWalk_500.cpp  SUM3.cpp  ShoeShuffling_800.cpp  Sort2.cpp  WheresBishop.cpp
Interview/Codeforces/binarySearch/: Teleporters_hard.cpp  VerySuspicious_medium.cpp
Interview/Codeforces/bitwise/: AndMEX_hard.cpp  AntiTheftRoadPlanning_2500.cpp  BestSchoolInRussia.cpp  BitFlips_medium.cpp  Contest1658.cpp  DivAndMod.cpp  FortuneTelling.cpp  MakingZero_simple.cpp  MinOrSum.cpp  MinimizOR_hard.cpp  OKEA.cpp  Patchouli_Magical_Talisman_800.cpp  PerfectBitmaskClass_800.cpp  Playoff.cpp  PowerXor_2500.cpp
Interview/Codeforces/codeton2/: A.cpp  B.cpp  C.cpp
Interview/Codeforces/data/: input.txt  input_AUA.txt  input_FA.txt  input_FTN.txt  input_FactorialsAndPowerOfTwo.txt  input_QualityVsQuantity.txt  input_RepetitionsDecoding.txt  input_divAndMod.txt  output_GreatSequence.txt
Interview/Codeforces/dfs/: BalanacedSubTrees_medium.cpp  KSetTree2500.cpp  Lenient_Vertex_Cover_2600 .cpp  TwoColorsTaps_hard.cpp
Interview/Codeforces/dp/: AdvancedUeslessAlgorithm.cpp  C_PalindromeBasis_hard.cpp  FactorialsAndPowerOfTwo.cpp  FormalismForFormalism_2600.cpp  JeeSeeYou_hard.cpp  MinimumDrawTime.cpp  MovingChips_medium.cpp  PostAddressChoose.cpp  SortingPancakes_hard.cpp  (+1 more)
Math/LinearAlgebra/: CMakeLists.txt
(+885 files in other folders)
